# notnews

./: .coverage  .gitignore  .travis.yml  CHANGELOG.md  Citation.cff  Makefile  README.md  README.rst  coverage.xml  pyproject.toml  readthedocs.yml  requirements.txt  requirements_rtd.txt  setup.py  tox.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql-analysis.yml  dependabot-auto-merge.yml  docs.yml  python-publish.yml  test.yml
docs/: Makefile  make.bat
docs/source/: api.md  cli.md  conf.py  index.rst  installation.md  llm_api.md  notnews.md  notnews.rst  quickstart.md
docs/source/_shared/: additional.md  api.md  cli.md  installation.md  llm_api.md  quickstart.md
examples/: llm_classification_example.py
model_training/: uk_not_news.ipynb  us_not_news_soft_news.ipynb
notnews/: __init__.py  classifiers.py  cli.py  llm.py  llm_classifier.py  llm_classify.py  llm_claude.py  llm_openai.py  llm_utils.py  normalizer.py  pred_soft_news.py  pred_soft_news_uk.py  pred_soft_news_us.py  pred_what_news_us.py  soft_news_url_cat.py  soft_news_url_cat_uk.py  soft_news_url_cat_us.py  utils.py
notnews/data/: README.rst
notnews/data/uk_model/: url_uk_classifier.joblib  url_uk_vectorizer.joblib
notnews/data/us_model/: nyt_us_classifier.joblib  nyt_us_soft_news_classifier.joblib  nyt_us_soft_news_vectorizer.joblib  nyt_us_vectorizer.joblib
notnews/models/: uk_not_news.ipynb  us_not_news.ipynb  us_not_news_soft_news.ipynb
notnews/tests/: sample_uk.csv  sample_us.csv  test_010_soft_news_url_cat.py  test_020_pred_soft_news.py  test_llm_classifier.py
streamlit/: requirements.txt  streamlit_app.py
tests/: test_010_soft_news_url_cat.py  test_020_pred_soft_news.py  test_llm_classifier.py
