[build-system]
requires = ["setuptools>=65.5.1", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notnews"
version = "0.2.3"
description = "Predict Soft News"
readme = "README.rst"
license = "MIT"
authors = [
    {name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com"},
    {name = "Gaurav Sood", email = "gsood07@gmail.com"}
]
keywords = ["soft news", "classification", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.22.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.5.0",
    "joblib",
    "tqdm",
    "nltk",
    "requests"
]

[project.optional-dependencies]
dev = [
    "check-manifest",
    "pytest>=6.0",
    "pytest-cov",
    "flake8",
    "black",
    "isort"
]
docs = [
    "sphinx>=6.1.3",
    "sphinx-rtd-theme>=1.2.0",
    "toml"
]

[project.urls]
Homepage = "https://github.com/notnews/notnews"
Repository = "https://github.com/notnews/notnews"
Documentation = "https://notnews.github.io/notnews/"
"Bug Tracker" = "https://github.com/notnews/notnews/issues"

[project.scripts]
soft_news_url_cat_us = "notnews.soft_news_url_cat_us:main"
pred_soft_news_us = "notnews.pred_soft_news_us:main"
pred_what_news_us = "notnews.pred_what_news_us:main"
soft_news_url_cat_uk = "notnews.soft_news_url_cat_uk:main"
pred_soft_news_uk = "notnews.pred_soft_news_uk:main"

[tool.setuptools]
packages = ["notnews"]
include-package-data = true

[tool.setuptools.package-data]
notnews = [
    "tests/*.csv",
    "data/us_model/*.joblib",
    "data/uk_model/*.joblib"
]

[tool.pytest.ini_options]
testpaths = ["notnews/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88