[build-system]
requires = ["hatchling>=1.21.1"]
build-backend = "hatchling.build"

[project]
name = "notnews"
version = "0.2.4"
description = "Predict Soft News"
readme = "README.md"
license = { text = "MIT" }
authors = [
    {name = "Suriyan Laohaprapanon", email = "suriyant@gmail.com"},
    {name = "Gaurav Sood", email = "gsood07@gmail.com"}
]
keywords = ["soft news", "classification", "machine learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.22.0,<2.0.0",
    "pandas>=1.3.0",
    "scikit-learn>=1.3.0,<1.6.0",  # Compatible with models trained on sklearn 0.22+ via compatibility layer
    "joblib",
    "tqdm",
    "nltk",
    "requests",
    "beautifulsoup4>=4.11.0"
]

[project.optional-dependencies]
docs = [
    "sphinx>=7.0",
    "furo>=2024.1.29",
    "sphinx-autodoc-typehints>=1.25",
    "sphinx-copybutton>=0.5",
    "myst-parser>=2.0",
]
llm = [
    "anthropic>=0.18.0",
    "openai>=1.12.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.7.0",
    "mypy>=1.0",
    "black>=24.0",
    "isort>=5.0",
    "pre-commit>=3.0",
]
test = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
]

[project.urls]
Homepage = "https://github.com/notnews/notnews"
Repository = "https://github.com/notnews/notnews"
Documentation = "https://notnews.github.io/notnews/"
"Bug Tracker" = "https://github.com/notnews/notnews/issues"

[project.scripts]
soft_news_url_cat_us = "notnews.soft_news_url_cat_us:main"
pred_soft_news_us = "notnews.pred_soft_news_us:main"
pred_what_news_us = "notnews.pred_what_news_us:main"
soft_news_url_cat_uk = "notnews.soft_news_url_cat_uk:main"
pred_soft_news_uk = "notnews.pred_soft_news_uk:main"
llm_classify_news = "notnews.llm_classify:main"

[tool.hatch.build]
exclude = [
    "/.github",
    "/.venv",
    "/docs",
    "/tests",
    "/.gitignore",
    "/.pre-commit-config.yaml",
]


# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "docs",
    ".eggs",
    "*.ipynb",
]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # imported but unused
"tests/*" = ["S101"]  # use of assert

[tool.ruff.lint.isort]
known-first-party = ["notnews"]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["notnews/tests"]
python_files = "test_*.py"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=notnews",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

# isort configuration
[tool.isort]
profile = "black"
line_length = 88
known-first-party = ["notnews"]

# mypy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
show_error_codes = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

# Coverage configuration
[tool.coverage.run]
source = ["notnews"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]